End-to-End sentiment analysis task based on how US airline passengers expressed their feelings on Twitter.

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -1139,6 +1139,8 @@
       "source": [
         "# Bringing it all together\n",
         "\n",
+        "End-to-End sentiment analysis task based on how US airline passengers expressed their feelings on Twitter.\n",
+        "\n",
         "## Step 1: Word cloud and feature creation"
       ]
     },
